SQuirreL SQL Client Change Log
==============================


${squirrelsql.changelog.header}


Enhancements:

Query Builder / New features in Graph plugin:
   The Query Builder is part of the Graph plugin. That means besides the former default and Zoom/Print modes
   Query Builder is a new mode of the Graph Plugin. Any existing Graph can be switched to the new mode.
   Besides the Query Builder itself several new features have been added to the Graph plugin:
   - A Graph can be viewed in separate window.
   - Tables can be dragged from the Object tree to a Graph window. For convenience there is a
     new Session tool bar button that creates a new Graph window and places it right besides the Session's Object tree.
   - Graphs have a Kick off/Start button on the lower left of a Graph panel to give more intuitive access to Graph functions.

Feature Request: 3307812: Select an entire row via the table's pop-up menu.

Oracle Plugin: 
   The DDL of a index could be displayed under the source tab.
   
New plugin "WIKI table configurations":
  This plugin provides some pre-defined configurations for various WIKI engines. With this configurations, Squirrel knows, how to transform the selection
  of a result table into a WIKI table. At the moment, configurations for the following WIKI's are provided:
    - Mediawiki
    - TiddlyWiki
  This plugin is a enhancement for the functionality "Copy as WIKI table"

Copy as WIKI table:
  Squirrel is now able, to copy the selection of a result table as WIKI text into the clipboard. (Right click on the result table => Copy as WIKI table) 
  At the new preferences panel "Global Preferences => Wiki Tables", the user can configure individual templates for the WIKI syntax.

Detached result windows now can be rerun.

Feature Request 3185630: SQL Panel layout:
 - Squirrel uses a vertical layout for the SQL Panel. Now, this layout can be changed to horizontal,