@@ -18,14 +18,12 @@ package net.sourceforge.squirrel_sql.client.session.mainpanel.objecttree.tabs;
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
-import java.awt.BorderLayout;
 import java.awt.Component;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 
 import javax.swing.JScrollPane;
-import javax.swing.JTextArea;
 
 import net.sourceforge.squirrel_sql.client.session.ISession;
 import net.sourceforge.squirrel_sql.fw.sql.SQLUtilities;
@@ -98,11 +96,13 @@ public abstract class BaseSourceTab extends BaseObjectTab
 
 	public Component getComponent()
 	{
+		
+		
 		if (_scroller == null)
 		{
 			if (_comp == null)
 			{
-				_comp = new DefaultSourcePanel();
+				_comp = createSourcePanel();
 			}
 			_scroller = new JScrollPane(_comp);
 			LineNumber lineNumber = new LineNumber(_comp);
@@ -117,6 +117,7 @@ public abstract class BaseSourceTab extends BaseObjectTab
 	 * subclass of BaseSourcePanel.
 	 * 
 	 * @param panel
+	 * @deprecated Use {@link #createSourcePanel()} as callback method.
 	 */
 	public void setSourcePanel(BaseSourcePanel panel)
 	{
@@ -130,6 +131,11 @@ public abstract class BaseSourceTab extends BaseObjectTab
 		{
 			throw new IllegalStateException("Null ISession");
 		}
+		
+		if(_comp == null){
+			_comp = createSourcePanel();
+		}
+		
 		try
 		{
 			PreparedStatement pstmt = createStatement();
@@ -148,6 +154,21 @@ public abstract class BaseSourceTab extends BaseObjectTab
 	}
 
 	/**
+	 * Create a instance of {@link BaseSourcePanel}.
+	 * Per default, a {@link DefaultSourcePanel} is used.
+	 * Subclasses can use this to override the default behavior provided by the DefaultSourcePanel, with a
+	 * subclass of BaseSourcePanel.
+	 * @return The source panel to use.
+	 */
+	protected BaseSourcePanel createSourcePanel() {
+		/*
+		 * This callback method replaces the previous use of setSourcePanel, because since we use syntax highlightning, we need a session.
+		 * So we need a callback for "lazy" initialization of the source pane.
+		 */
+		return new DefaultSourcePanel(getSession());
+	}
+
+	/**
 	 * Sub-classes should override this method to return a PreparedStatement which will yield the source code
 	 * of the object returned by getDatabaseObjectInfo.
 	 * 
@@ -161,16 +182,16 @@ public abstract class BaseSourceTab extends BaseObjectTab
 	{
 		private static final long serialVersionUID = 1L;
 
-		private JTextArea _ta;
+		
 
-		DefaultSourcePanel() {
-			super(new BorderLayout());
-			createUserInterface();
+		DefaultSourcePanel(ISession session) {
+			super(session);
 		}
+
 
 		public void load(ISession session, PreparedStatement stmt)
 		{
-			_ta.setText("");
+			getTextArea().setText("");
 			ResultSet rs = null;
 			try
 			{
@@ -180,8 +201,8 @@ public abstract class BaseSourceTab extends BaseObjectTab
 				{
 					buf.append(rs.getString(1));
 				}
-				_ta.setText(buf.toString());
-				_ta.setCaretPosition(0);
+				getTextArea().setText(buf.toString());
+				getTextArea().setCaretPosition(0);
 			} catch (SQLException ex)
 			{
 				session.showErrorMessage(ex);
@@ -192,11 +213,5 @@ public abstract class BaseSourceTab extends BaseObjectTab
 
 		}
 
-		private void createUserInterface()
-		{
-			_ta = new JTextArea();
-			_ta.setEditable(false);
-			add(_ta, BorderLayout.CENTER);
-		}
 	}
 }
